home/namespaced/crossmap-dev/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crossmap-api
spec:
  template:
    spec:
      containers:
      - name: crossmap-api
        ports:
        - containerPort: 9000
