home/namespaced/crossmap-dev/patch-container-port.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crossmap-api
spec:
  template:
    spec:
      containers:
      - name: api
        ports:
        - name: http
          containerPort: 9000
