home/namespaced/crossmap-dev/virtualservices.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crossmap-api
  annotations:
    external-dns.alpha.kubernetes.io/target: 91279420-9a62-4119-a0c9-b8a0ef00a087.cfargotunnel.com
spec:
  gateways:
  - istio-gateways/crossmap-dev
  hosts:
  - api.crossmap.dev
  http:
  - route:
    - destination:
        host: api.crossmap-dev.svc.cluster.local
        port:
          number: 9000
    corsPolicy:
      allowOrigins:
      - exact: "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      - OPTIONS
      allowCredentials: true
      allowHeaders:
      - Content-Type
      - Authorization
      - X-Crossmap-Public-Key
      - X-Crossmap-Request-Id
      maxAge: "24h"
